TileParser.java
// Generated from Tile.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TileParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, STRING=3, NUMBER=4, LIST=5, STRUCT=6, BOOL=7, FUNCTION=8, 
		NULL=9, VOID=10, ISA=11, Assert=12, Def=13, Struct=14, If=15, Else=16, 
		Return=17, Run=18, Import=19, Break=20, Continue=21, For=22, While=23, 
		To=24, Do=25, Start=26, End=27, In=28, Remove=29, Clear=30, SingularOp=31, 
		MultiOp=32, Or=33, And=34, Equals=35, NEquals=36, GTEquals=37, LTEquals=38, 
		Pow=39, Excl=40, GT=41, LT=42, Add=43, Subtract=44, Multiply=45, Divide=46, 
		Modulus=47, OBrace=48, CBrace=49, OBracket=50, CBracket=51, OParen=52, 
		CParen=53, SColon=54, Assign=55, Comma=56, QMark=57, Colon=58, Bool=59, 
		Number=60, Identifier=61, String=62, Comment=63, Space=64;
	public static final int
		RULE_parse = 0, RULE_block = 1, RULE_statement = 2, RULE_functionStatment = 3, 
		RULE_importStatmemt = 4, RULE_runStatment = 5, RULE_assignment = 6, RULE_functionCall = 7, 
		RULE_ifStatement = 8, RULE_ifStat = 9, RULE_elseIfStat = 10, RULE_elseStat = 11, 
		RULE_functionDecl = 12, RULE_structDecl = 13, RULE_forStatement = 14, 
		RULE_whileStatement = 15, RULE_breakStatement = 16, RULE_continueStatement = 17, 
		RULE_idList = 18, RULE_exprList = 19, RULE_expression = 20, RULE_listFunctions = 21, 
		RULE_list = 22, RULE_indexes = 23, RULE_type = 24, RULE_addSub = 25, RULE_mulDivMod = 26;
	public static final String[] ruleNames = {
		"parse", "block", "statement", "functionStatment", "importStatmemt", "runStatment", 
		"assignment", "functionCall", "ifStatement", "ifStat", "elseIfStat", "elseStat", 
		"functionDecl", "structDecl", "forStatement", "whileStatement", "breakStatement", 
		"continueStatement", "idList", "exprList", "expression", "listFunctions", 
		"list", "indexes", "type", "addSub", "mulDivMod"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'@'", "'string'", "'number'", "'list'", null, "'bool'", 
		"'funct'", "'null'", "'void'", "'isa'", "'assert'", "'function'", null, 
		"'if'", "'else'", "'return'", "'run'", "'import'", "'break'", "'continue'", 
		"'for'", "'while'", null, "'do'", null, null, "'in'", "'remove'", "'clear'", 
		null, null, "'||'", "'&&'", "'=='", "'!='", "'>='", "'<='", "'^'", "'!'", 
		"'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'%'", "'{'", "'}'", "'['", 
		"']'", "'('", "')'", "';'", "'='", "','", "'?'", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "STRING", "NUMBER", "LIST", "STRUCT", "BOOL", "FUNCTION", 
		"NULL", "VOID", "ISA", "Assert", "Def", "Struct", "If", "Else", "Return", 
		"Run", "Import", "Break", "Continue", "For", "While", "To", "Do", "Start", 
		"End", "In", "Remove", "Clear", "SingularOp", "MultiOp", "Or", "And", 
		"Equals", "NEquals", "GTEquals", "LTEquals", "Pow", "Excl", "GT", "LT", 
		"Add", "Subtract", "Multiply", "Divide", "Modulus", "OBrace", "CBrace", 
		"OBracket", "CBracket", "OParen", "CParen", "SColon", "Assign", "Comma", 
		"QMark", "Colon", "Bool", "Number", "Identifier", "String", "Comment", 
		"Space"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tile.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TileParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TileVisitor ) return ((TileVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			block();
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<ImportStatmemtContext> importStatmemt() {
			return getRuleContexts(ImportStatmemtContext.class);
		}
		public ImportStatmemtContext importStatmemt(int i) {
			return getRuleContext(ImportStatmemtContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public List<StructDeclContext> structDecl() {
			return getRuleContexts(StructDeclContext.class);
		}
		public StructDeclContext structDecl(int i) {
			return getRuleContext(StructDeclContext.class,i);
		}
		public TerminalNode Return() { return getToken(TileParser.Return, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TileVisitor ) return ((TileVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Import) {
				{
				{
				setState(57);
				importStatmemt();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(66);
					switch (_input.LA(1)) {
					case T__1:
					case NULL:
					case Assert:
					case If:
					case Run:
					case Break:
					case Continue:
					case For:
					case While:
					case Excl:
					case Subtract:
					case OBracket:
					case OParen:
					case Bool:
					case Number:
					case Identifier:
					case String:
						{
						setState(63);
						statement();
						}
						break;
					case Def:
						{
						setState(64);
						functionDecl();
						}
						break;
					case Struct:
						{
						setState(65);
						structDecl();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(76);
			_la = _input.LA(1);
			if (_la==Return) {
				{
				setState(71);
				match(Return);
				setState(73);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << NULL) | (1L << Assert) | (1L << Excl) | (1L << Subtract) | (1L << OBracket) | (1L << OParen) | (1L << Bool) | (1L << Number) | (1L << Identifier) | (1L << String))) != 0)) {
					{
					setState(72);
					expression(0);
					}
				}

				setState(75);
				match(SColon);
				}
			}

			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Def) {
				{
				{
				setState(78);
				functionDecl();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public FunctionStatmentContext functionStatment() {
			return getRuleContext(FunctionStatmentContext.class,0);
		}
		public RunStatmentContext runStatment() {
			return getRuleContext(RunStatmentContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TileVisitor ) return ((TileVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				assignment();
				setState(85);
				match(SColon);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				functionCall();
				setState(88);
				match(SColon);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				ifStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				forStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(92);
				whileStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(93);
				functionStatment();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(94);
				runStatment();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(95);
				breakStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(96);
				continueStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionStatmentContext extends ParserRuleContext {
		public FunctionStatmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionStatment; }
	 
		public FunctionStatmentContext() { }
		public void copyFrom(FunctionStatmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ListFunctionStatmentContext extends FunctionStatmentContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ListFunctionsContext listFunctions() {
			return getRuleContext(ListFunctionsContext.class,0);
		}
		public ListFunctionStatmentContext(FunctionStatmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).enterListFunctionStatment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).exitListFunctionStatment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TileVisitor ) return ((TileVisitor<? extends T>)visitor).visitListFunctionStatment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionStatmentContext functionStatment() throws RecognitionException {
		FunctionStatmentContext _localctx = new FunctionStatmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionStatment);
		try {
			_localctx = new ListFunctionStatmentContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			expression(0);
			setState(100);
			match(T__0);
			setState(101);
			listFunctions();
			setState(102);
			match(SColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStatmemtContext extends ParserRuleContext {
		public TerminalNode Import() { return getToken(TileParser.Import, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ImportStatmemtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatmemt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).enterImportStatmemt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).exitImportStatmemt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TileVisitor ) return ((TileVisitor<? extends T>)visitor).visitImportStatmemt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatmemtContext importStatmemt() throws RecognitionException {
		ImportStatmemtContext _localctx = new ImportStatmemtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importStatmemt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(Import);
			setState(105);
			expression(0);
			setState(106);
			match(SColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RunStatmentContext extends ParserRuleContext {
		public TerminalNode Run() { return getToken(TileParser.Run, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public RunStatmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_runStatment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).enterRunStatment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).exitRunStatment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TileVisitor ) return ((TileVisitor<? extends T>)visitor).visitRunStatment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RunStatmentContext runStatment() throws RecognitionException {
		RunStatmentContext _localctx = new RunStatmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_runStatment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(Run);
			setState(109);
			match(OParen);
			setState(110);
			expression(0);
			setState(111);
			match(CParen);
			setState(112);
			match(SColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SingularAssignmentContext extends AssignmentContext {
		public TerminalNode Identifier() { return getToken(TileParser.Identifier, 0); }
		public TerminalNode SingularOp() { return getToken(TileParser.SingularOp, 0); }
		public IndexesContext indexes() {
			return getRuleContext(IndexesContext.class,0);
		}
		public SingularAssignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).enterSingularAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).exitSingularAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TileVisitor ) return ((TileVisitor<? extends T>)visitor).visitSingularAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FullAssignmentContext extends AssignmentContext {
		public TerminalNode Identifier() { return getToken(TileParser.Identifier, 0); }
		public TerminalNode MultiOp() { return getToken(TileParser.MultiOp, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public IndexesContext indexes() {
			return getRuleContext(IndexesContext.class,0);
		}
		public FullAssignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).enterFullAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).exitFullAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TileVisitor ) return ((TileVisitor<? extends T>)visitor).visitFullAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RegularAssignmentContext extends AssignmentContext {
		public TerminalNode Identifier() { return getToken(TileParser.Identifier, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public IndexesContext indexes() {
			return getRuleContext(IndexesContext.class,0);
		}
		public RegularAssignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).enterRegularAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).exitRegularAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TileVisitor ) return ((TileVisitor<? extends T>)visitor).visitRegularAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StructAssignmentContext extends AssignmentContext {
		public List<TerminalNode> Identifier() { return getTokens(TileParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(TileParser.Identifier, i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StructAssignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).enterStructAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).exitStructAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TileVisitor ) return ((TileVisitor<? extends T>)visitor).visitStructAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignment);
		int _la;
		try {
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new RegularAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				match(Identifier);
				setState(116);
				_la = _input.LA(1);
				if (_la==OBracket) {
					{
					setState(115);
					indexes();
					}
				}

				setState(118);
				match(Assign);
				setState(119);
				expression(0);
				}
				break;
			case 2:
				_localctx = new SingularAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				match(Identifier);
				setState(122);
				_la = _input.LA(1);
				if (_la==OBracket) {
					{
					setState(121);
					indexes();
					}
				}

				setState(124);
				match(SingularOp);
				}
				break;
			case 3:
				_localctx = new FullAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				match(Identifier);
				setState(127);
				_la = _input.LA(1);
				if (_la==OBracket) {
					{
					setState(126);
					indexes();
					}
				}

				setState(129);
				match(MultiOp);
				setState(130);
				expression(0);
				}
				break;
			case 4:
				_localctx = new StructAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(131);
				match(Identifier);
				setState(132);
				match(T__0);
				setState(133);
				match(Identifier);
				setState(134);
				match(Assign);
				setState(135);
				expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
	 
		public FunctionCallContext() { }
		public void copyFrom(FunctionCallContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssertFunctionCallContext extends FunctionCallContext {
		public TerminalNode Assert() { return getToken(TileParser.Assert, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssertFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).enterAssertFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).exitAssertFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TileVisitor ) return ((TileVisitor<? extends T>)visitor).visitAssertFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdentifierFunctionCallContext extends FunctionCallContext {
		public TerminalNode Identifier() { return getToken(TileParser.Identifier, 0); }
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public IdentifierFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).enterIdentifierFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TileListener ) ((TileListener)listener).exitIdentifierFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TileVisitor ) return ((TileVisitor<? extends T>)visitor).visitIdentifierFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
